# Grave-Site-Server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RoadMap.md  cli.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
deploy/: cloudrun-service.yaml
docs/: google_cloudrun_drive_gemini.md  total_guide_cloudrun_api_diary_gems.md
memory_vault/: README.md  diary_raw.txt  memories.csv  memory_entry_schema.json
memory_vault/prompts/: extract_prompt.txt  inject_prompt.txt
openapi/: gpts_actions.yaml
prompts/: CHANGELOG.md  chatgpt_100char_bot_template.md  diary_tagging_v1.txt
src/: __init__.py  cli.py  cli_messages.py  diary_cli.py  diary_processor.py  gemini_diary_batch.py  input_validation.py  llm_batch.py  openai_diary_batch.py  prompt_cli.py
src/api/: main.py  models.py  router.py
src/embedding/: __init__.py  cli.py  io_utils.py  models.py  pipeline.py  storage.py  vectorizer.py
src/exporters/: calendar_exporter.py  drive_exporter.py
src/gitops/: __init__.py  backends.py  models.py  policy.py  service.py
src/workflows/: __init__.py  scheduled_diary_pipeline.py
tests/: test_calendar_exporter.py  test_cli.py  test_cli_messages.py  test_diary_cli.py  test_diary_processor.py  test_drive_exporter.py  test_gemini_diary_batch.py  test_input_validation.py  test_llm_batch.py  test_openai_diary_batch.py  test_openapi_spec.py  test_prompt_cli.py
tests/api/: test_save_message.py
tests/embedding/: test_embedding_cli.py  test_io_vector_storage_pipeline.py
(+8 files in other folders)
